# gmp-mpfr-sys

./: .appveyor.yml  .gitlab-ci.yml  Cargo.toml  README.md  RELEASES.md  build.rs  cdoc.sh  unpack.sh
doc/: index.html  rustdoc.css
doc-c/GMP/: Algorithms.html  C_002b_002b-Class-Interface.html  Concept-Index.html  Contributors.html  Copying.html  Custom-Allocation.html  Floating_002dpoint-Functions.html  Formatted-Input.html  Formatted-Output.html  Function-Index.html  GMP-Basics.html  GNU-Free-Documentation-License.html  Installing-GMP.html  Integer-Functions.html  Internals.html  Introduction-to-GMP.html  Language-Bindings.html  Low_002dlevel-Functions.html  Random-Number-Functions.html  Rational-Number-Functions.html  References.html  Reporting-Bugs.html  index.html
doc-c/MPC/: Complex-Functions.html  Concept-Index.html  Copying.html  Function-Index.html  GNU-Free-Documentation-License.html  GNU-MPC-Basics.html  Installing-GNU-MPC.html  Introduction-to-GNU-MPC.html  References.html  Reporting-Bugs.html  index.html
doc-c/MPFR/: API-Compatibility.html  Concept-Index.html  Contributors.html  Copying.html  Function-and-Type-Index.html  GNU-Free-Documentation-License.html  Installing-MPFR.html  Introduction-to-MPFR.html  MPFR-Basics.html  MPFR-Interface.html  MPFR-and-the-IEEE-754-Standard.html  References.html  Reporting-Bugs.html  index.html
doc/gmp/: ABI-and-ISA.html  Algorithms.html  Applying-Integer-Functions.html  Assembly-Basics.html  Assembly-Cache-Handling.html  Assembly-Carry-Propagation.html  Assembly-Code-Organisation.html  Assembly-Coding.html  Assembly-Floating-Point.html  Assembly-Functional-Units.html  Assembly-Loop-Unrolling.html  Assembly-SIMD-Instructions.html  Assembly-Software-Pipelining.html  Assembly-Writing-Guide.html  Assigning-Floats.html  Assigning-Integers.html  Autoconf.html  Basecase-Division.html  Basecase-Multiplication.html  Binary-GCD.html  Binary-to-Radix.html  Binomial-Coefficients-Algorithm.html  Block_002dWise-Barrett-Division.html  Build-Options.html  C_002b_002b-Class-Interface.html  C_002b_002b-Formatted-Input.html  C_002b_002b-Formatted-Output.html  C_002b_002b-Interface-Floats.html  C_002b_002b-Interface-General.html  C_002b_002b-Interface-Integers.html  C_002b_002b-Interface-Internals.html  C_002b_002b-Interface-Limitations.html  C_002b_002b-Interface-Random-Numbers.html  C_002b_002b-Interface-Rationals.html  Comparing-Rationals.html  Compatibility-with-older-versions.html  Concept-Index.html  Contributors.html  Converting-Floats.html  Converting-Integers.html  (+106 more)
doc/mpc/: Advanced-Functions.html  Assigning-Complex-Numbers.html  Basic-Arithmetic.html  Complex-Comparison.html  Complex-Functions.html  Concept-Index.html  Converting-Complex-Numbers.html  Copying.html  Function-Index.html  GNU-Free-Documentation-License.html  GNU-MPC-Basics.html  Initializing-Complex-Numbers.html  Installing-GNU-MPC.html  Internals.html  Introduction-to-GNU-MPC.html  Miscellaneous-Complex-Functions.html  Power-Functions-and-Logarithm.html  Projection-_0026-Decomposing.html  References.html  Reporting-Bugs.html  (+4 more)
etc/: appveyor.yml  gen-doc-index.sh  gitlab-ci.yml  index-contents.html  rug.svg.b64  unpack.sh
gmp-6.2.0-c/: ChangeLog  Makefile.in  configure
mpc-1.2.0-c/: configure
mpfr-4.0.2-p7-c/: PATCHES  VERSION
mpfr-4.0.2-p9-c/: PATCHES  VERSION  configure
mpfr-4.1.0-p11-c/: PATCHES  VERSION
mpfr-4.1.0-p12-c/: PATCHES  VERSION
mpfr-4.1.0-p7-c/: PATCHES  VERSION
src/: C.rs  gmp.rs  lib.rs  mpc.rs  mpfr.rs
(+85 files in other folders)
