# Copyright © 2017–2019 University of Malta

# Copying and distribution of this file, with or without modification,
# are permitted in any medium without royalty provided the copyright
# notice and this notice are preserved. This file is offered as-is,
# without any warranty.

[package]
name = "gmp-mpfr-sys"
version = "1.2.0"
authors = ["Trevor Spiteri <trevor.spiteri@um.edu.mt>"]
edition = "2018"
description = "Rust FFI bindings for GMP, MPFR and MPC"
documentation = "https://docs.rs/gmp-mpfr-sys"
repository = "https://gitlab.com/tspiteri/gmp-mpfr-sys"
readme = "README.md"
keywords = ["gmp", "bignum", "mathematics", "numerics"]
categories = ["external-ffi-bindings", "no-std", "science"]
license = "LGPL-3.0+"
build = "build.rs"
links = "gmp"
publish = false

[features]
default = ["mpfr", "mpc"]
mpfr = []
mpc = ["mpfr"]
fail-on-warnings = []

# With the cnodelete feature, C build artefacts are not deleted.

cnodelete = []

[dependencies.libc]
version = "0.2.44"
default-features = false

[build-dependencies]
dirs = "2.0"
